--- a/trip_planner_front/src/page/tour/tour.css
+++ b/trip_planner_front/src/page/tour/tour.css
@@ -322,3 +322,10 @@
   font-size: 18px;
   font-family: pt-b;
 }
+
+.tour-view-content-wrap > .tour-view-content > .tour-view-calendar {
+  border: 1px solid #999;
+  border-radius: 10px;
+  width: 330px;
+  margin-left: 20px;
+}
