--- a/trip_planner_front/src/page/tour/tour.css
+++ b/trip_planner_front/src/page/tour/tour.css
@@ -262,12 +262,14 @@
   margin-right: 10px;
 }
 .tour-view-wrap > .tour-view-top > .tour-view-info > .tour-view-name {
+  display: inline-flex;
+  align-items: center;
   font-family: pt-b;
-  font-size: 1.8em;
+  font-size: 28px;
 }
 .tour-view-wrap > .tour-view-top > .tour-view-info > .tour-view-name > img {
-  width: 24px;
-  height: 24px;
+  width: 28px;
+  height: 28px;
   cursor: pointer;
   margin-left: 20px;
 }
@@ -326,13 +328,46 @@
 .tour-view-content-wrap > .tour-view-content {
   display: flex;
 }
-.tour-view-content-wrap > .tour-view-content > .tour-view-calendar {
+
+.tour-view-calendar > .css-1rv8zyt-MuiStack-root {
   border: 1px solid #999;
   border-radius: 10px;
-  width: 330px;
   margin-left: 20px;
-  margin-right: 100px;
+  margin-right: 240px;
 }
-.tour-view-content-wrap > .tour-view-content > .tour-view-book-wrap {
-  flex: 1;
+
+.tour-view-book-wrap > .tour-view-book-title {
+  margin-bottom: 20px;
+}
+.tour-view-book-wrap > .tour-view-book-title > h3 {
+  margin-bottom: 12px;
+}
+
+.tour-view-book-wrap > .tour-view-book-title > .tour-view-book-date > span {
+  padding-left: 20px;
+  font-size: 1.1em;
+}
+
+.tour-view-book-wrap > .tour-view-book-title > .tour-view-book-ticket {
+  padding-left: 20px;
+  font-size: 1.05em;
+}
+
+.tour-view-book-title > .tour-view-book-ticket > .tour-ticket-type {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 15px; /* 각 입장권 타입 사이의 간격 조절 */
+}
+.tour-view-book-ticket > .tour-ticket-type > .tour-ticket-info {
+  flex: 1; /* 남은 공간을 모두 차지하도록 설정 */
+  margin-right: 120px;
+}
+.tour-view-book-ticket > .tour-ticket-type > .tour-quantity-controls {
+  display: flex;
+  align-items: center;
+}
+.tour-quantity-controls .material-icons {
+  cursor: pointer;
+  margin: 0 10px; /* 각 컨트롤 아이콘 사이의 간격 조절 */
 }
