--- a/trip_planner_front/src/page/promotion/promotion.css
+++ b/trip_planner_front/src/page/promotion/promotion.css
@@ -1,16 +1,26 @@
-.contents.promotion .btn_search{
-    display: block; width: 36px; height: 36px; background: url(/public/images/icon_search.svg) no-repeat center / contain;
+.contents.promotion .btn_search {
+  display: block;
+  width: 36px;
+  height: 36px;
+  background: url(/public/images/icon_search.svg) no-repeat center / contain;
 }
 
-.contents.promotion .input_wrap{
-    margin: 20px auto;
-    margin-bottom: 50px;
-    width: 500px;
-    border: 1px solid black;
-    border-radius: 10px;
-    padding-left: 20px;
+.contents.promotion .input_wrap {
+  margin: 20px auto;
+  margin-bottom: 50px;
+  width: 500px;
+  border: 1px solid black;
+  border-radius: 10px;
+  padding-left: 20px;
 }
 
-.contents.promotion .input{
-    border-bottom: none;
+.contents.promotion .input {
+  border-bottom: none;
+}
+
+.contents.promotion .promotion_item_wrap {
+  min-width: 1000px;
+  margin: 0 auto;
+  height: 500px;
+  padding: 40px;
 }
