--- a/trip_planner_front/src/page/promotion/promotion.css
+++ b/trip_planner_front/src/page/promotion/promotion.css
@@ -29,4 +29,12 @@
   border: 1px solid black;
   border-radius: 20px;
   height: 100%;
+  box-shadow: 0px 4px 24px 1px rgba(0, 0, 0, 0.28);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+}
+
+.contents.promotion .promotion_title {
+  margin: 20px;
+  text-align: center;
 }
