--- a/trip_planner_front/src/page/tour/tour.css
+++ b/trip_planner_front/src/page/tour/tour.css
@@ -465,6 +465,7 @@
 .tour-review-input-wrap > .tour-review-input > .tour-review-text input {
   width: 91.5%;
   font-size: 16px;
+  padding-right: 20px;
 }
 .tour-review-input-wrap .review-btn {
   height: 36px;
