--- a/trip_planner_front/src/page/promotion/promotion.css
+++ b/trip_planner_front/src/page/promotion/promotion.css
@@ -1,3 +1,10 @@
+/*
+메인 색상
+#005caa 파랑  #e9511c 주황  #f4f5ef 베이지  #000000 검정
+#30e462 성공  #ff2803 에러  #f9b71b 경고    #1795f0 인포
+기타 #89cff0 #f4f5ef #8f705b #035e7b
+*/
+
 .contents.promotion .btn_search {
   display: block;
   width: 36px;
@@ -34,7 +41,43 @@
   -webkit-backdrop-filter: blur(5px);
 }
 
+.contents.promotion .promotion_item_wrap{
+  position: relative;
+}
+
+.contents.promotion .promotion_content:hover {
+  box-shadow: 2px 10px 34px 10px  rgba(0, 0, 0, 0.28);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+}
+
 .contents.promotion .promotion_title {
   margin: 20px;
+  padding-bottom: 20px;
   text-align: center;
+  border-bottom: 1px solid #e9511c;
+}
+.contents.promotion .promotion-list-img{
+  width: 300px;
+  height: 300px;
+  padding: 20px;
+}
+
+
+.contents.promotion .promotion-list-img>img{
+  width: 100%;
+  height: 100%;
+  border-radius: 20px;
+}
+
+.contents.promotion .promotion-list-intro{
+  position: absolute;
+  left: 400px;
+  top: 130px;
+}
+
+.contents.promotion .promotion-list-price{
+  position: absolute;
+  bottom: 60px;
+  left: 400px;
 }
