--- a/trip_planner_front/src/page/tour/tour.css
+++ b/trip_planner_front/src/page/tour/tour.css
@@ -470,3 +470,61 @@
 .tour-review-input-wrap .review-btn {
   height: 36px;
 }
+
+/* 리뷰 모음 */
+.tour-review-list-wrap {
+  margin-top: 10px;
+  padding-left: 50px;
+  padding-right: 50px;
+}
+.tour-review-list-wrap .tour-reviewList-item {
+  display: flex;
+  align-items: flex-start;
+  border-bottom: 1px solid #ccc;
+  padding: 15px 0;
+}
+
+.tour-review-list-wrap .tour-reviewList-item .tour-reviewList-profile {
+  flex-shrink: 0;
+  padding-left: 20px;
+  margin-right: 30px;
+}
+.tour-review-list-wrap .tour-reviewList-item .tour-reviewList-profile span {
+  display: flex; /* 아이콘을 flex 컨테이너로 만듭니다. */
+  justify-content: center; /* 수평 가운데 정렬 */
+  align-items: center; /* 수직 가운데 정렬 */
+  font-size: 60px;
+  color: #035e7b;
+}
+
+.tour-review-list-wrap .tour-reviewList-item .tour-reviewList-content {
+  flex-grow: 1;
+}
+
+.tour-reviewList-item .tour-reviewList-content .tour-reviewList-header {
+  display: flex;
+  align-items: center;
+}
+
+.tour-reviewList-content .tour-reviewList-header .tour-reviewList-nickName {
+  font-family: pt-b;
+  padding: 0px 10px;
+  border-right: 1px solid #666;
+  color: #035e7b;
+}
+
+.tour-reviewList-content .tour-reviewList-header .tour-reviewList-date {
+  color: #666;
+  padding: 0px 10px;
+}
+
+.tour-reviewList-content .tour-reviewList-star {
+  padding-right: 10px;
+  border-right: 1px solid #666;
+  height: 24px;
+}
+
+.tour-reviewList-content .tour-reviewList-text {
+  color: #1e1e1e;
+  padding: 5px 10px;
+}
