--- a/trip_planner_front/src/page/INN/innDetailView.css
+++ b/trip_planner_front/src/page/INN/innDetailView.css
@@ -21,7 +21,7 @@
   margin-bottom: 30px;
 }
 .inn-detail-img > img {
-  width: 80%;
+  width: 100%;
   height: 450px;
   border-radius: 10px;
 }
@@ -29,30 +29,58 @@
   display: flex;
   justify-content: space-between;
 }
-.inn-detail-top * {
+.inn-detail-top div:nth-child(1) {
+  font-size: 200%;
+  font-family: pt-eb;
+}
+.inn-detail-top div:nth-child(2) {
   color: var(--main_01);
   font-family: pt-b;
-  font-size: 150%;
+  font-size: 100%;
+  line-height: 48px;
+}
+.hashTag-box {
+  color: var(--gray_04);
+  font-family: pt-b;
+  font-style: italic;
+  margin: 10px 0;
 }
 .inn-detail-rooms {
-  margin-top: 20px;
+  margin: 0 auto;
+  width: 70%;
+  background-color: #f1f1f1;
+  margin-bottom: 20px;
+  border-radius: 10px;
 }
-.inn-detail-rooms > div {
-  margin-top: 20px;
-}
-.inn-detail-room {
-  height: 300px;
-  border: 1px solid #c1c1c1;
-  line-height: 300px;
-  text-align: center;
-}
+
 .inn-detail-intro {
-  margin-top: 30px;
-  padding-top: 30px;
-  border-top: 1px solid #c1c1c1;
+  padding: 30px 0;
+  border-top: 1px solid #f1f1f1;
+  margin-bottom: 30px;
+  border-bottom: 1px solid #f1f1f1;
+}
+.intro {
+  font-family: pt-eb;
+  color: var(--gray_03);
+  width: 70%;
+  margin: 0 auto;
+}
+.inn-detail-intro h2 {
+  margin: 0;
+}
+.inn-detail-intro sup {
+  color: var(--main_02);
+  font-size: 300%;
+}
+
+.second-sup {
+  text-align: right;
 }
 .inn-detail-info {
   margin-top: 30px;
   padding-top: 30px;
-  border-top: 1px solid #c1c1c1;
+  border-top: 1px solid #f1f1f1;
+}
+.inn-detail-info span {
+  text-indent: 20px;
 }
