--- a/trip_planner_front/src/page/mypage/myBooks.css
+++ b/trip_planner_front/src/page/mypage/myBooks.css
@@ -12,7 +12,7 @@
 .myBookInns_list>.bookItem .item_top_wrap .partnerName{display: flex; align-items: center; gap: 4px; font-family: pt-b; font-size: 16px; line-height: 1.5;}
 .myBookInns_list>.bookItem .item_top_wrap .badges{margin-top: -4px; margin-right: -4px;}
 .myBookInns_list>.bookItem .item_contents_wrap{display: flex; gap: 24px;}
-.myBookInns_list>.bookItem .item_thumbs{width: 396px; height: 240px;}
+.myBookInns_list>.bookItem .item_thumbs{width: 396px; height: 240px; background-color: #f2f2f2;}
 .myBookInns_list>.bookItem .item_thumbs>img{display: block;}
 .myBookInns_list>.bookItem .item_details{display: flex; flex-direction: column; gap: 12px;}
 .myBookInns_list>.bookItem .item_details .row{display: flex; gap: 20px;}
