--- a/trip_planner_front/src/page/mypage/myTrips.css
+++ b/trip_planner_front/src/page/mypage/myTrips.css
@@ -3,6 +3,8 @@
 .myTrips_tab .tab_btns{display: flex;}
 .myTrips_tab .tab_btns .tab_btn{flex: 1; display: block; border-radius: 16px 16px 0 0; background-color: #89CFF0; color: #fff; font-family: pt-b; font-size: 16px; line-height: 60px;}
 .myTrips_tab .tab_btns .tab_btn.active{background-color: #fff; color: #50B8EA;}
+.myTrips_tab .tab_btns .tab_btn.active+.tab_btn+.tab_btn{opacity: 0.8;}
+.myTrips_tab .tab_btns .tab_btn:first-child:not(.active){opacity: 0.8;}
 .myTrips_tab .tab_contents{min-height: 620px; padding: 24px 20px 40px 20px; background-color: #fff; border-radius: 0 0 16px 16px;}
 
 .myTrips_wrap .creatTrips_btn{display: flex; justify-content: center; align-items: center; gap: 20px; padding: 16px; border: 1px dashed var(--line_02); border-radius: 8px; background-color: #fff; transition: all 0.2s;}
