--- a/trip_planner_front/src/page/INN/innDetailView.css
+++ b/trip_planner_front/src/page/INN/innDetailView.css
@@ -45,13 +45,6 @@
   font-style: italic;
   margin: 10px 0;
 }
-.inn-detail-rooms {
-  margin: 0 auto;
-  width: 70%;
-  background-color: #f1f1f1;
-  margin-bottom: 20px;
-  border-radius: 10px;
-}
 
 .inn-detail-intro {
   padding: 30px 0;
@@ -83,4 +76,61 @@
 }
 .inn-detail-info span {
   text-indent: 20px;
+}
+.inn-detail-rooms {
+  margin: 0 auto;
+  width: 70%;
+  background-color: #f1f1f1;
+  margin-bottom: 20px;
+  border-radius: 10px;
+  display: flex;
+  gap: 40px;
+  padding: 20px;
+  flex-grow: 1;
+}
+
+.room-name {
+  margin: 20px auto;
+  text-align: center;
+  font-family: pt-eb;
+  color: var(--main_04);
+  font-size: 1.25rem;
+  background-color: #f1f1f1;
+}
+.room-box-left img {
+  width: 100%;
+  max-width: 500px;
+  height: 300px;
+  border-radius: 10px;
+}
+.room-box-right {
+  width: 70%;
+}
+.room-right-detail {
+  border-radius: 10px;
+  padding: 30px;
+  color: var(--gray_03);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 100px;
+  background-color: rgb(255, 255, 255);
+  margin-bottom: 10px;
+}
+.room-bottom {
+  text-align: right;
+}
+.room-bottom button {
+  border-radius: 8px;
+}
+.room-price {
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
+  border-radius: 10px;
+  background-color: rgb(255, 255, 255);
+  color: var(--main_02);
+  font-family: pt-eb;
+  font-size: 1.125rem;
+  margin-bottom: 20px;
 }
