--- a/trip_planner_front/src/page/INN/innDetailView.css
+++ b/trip_planner_front/src/page/INN/innDetailView.css
@@ -134,3 +134,64 @@
   font-size: 1.125rem;
   margin-bottom: 20px;
 }
+/* 메인 스와이퍼*/
+
+.inn-detail-img {
+  max-width: unset;
+  width: calc(100% + 80px);
+  margin-left: -40px;
+}
+.inn-detail-img {
+  max-width: 1280px;
+  margin: 0 auto 24px;
+}
+.inn_slide .swiper-slide > a {
+  position: relative;
+  display: block;
+  height: 440px;
+}
+.inn_slide .swiper-slide::after {
+  content: "";
+  display: block;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  border-radius: 5px;
+}
+.inn_slide .swiper-slide > a {
+  display: block;
+}
+.inn_slide .swiper-slide img {
+  width: 100%;
+  height: 600px;
+  object-fit: cover;
+  object-position: center;
+}
+.inn_slide .swiper-button-prev {
+  left: calc((100% - 1280px) / 2);
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background: rgba(255, 255, 255, 0.6)
+    url(/public/images/icon_arrow_prev_black_40.svg) no-repeat center / contain;
+}
+.inn_slide .swiper-button-prev::after {
+  display: none;
+}
+.inn_slide .swiper-button-next {
+  right: calc((100% - 1280px) / 2);
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background: rgba(255, 255, 255, 0.6)
+    url(/public/images/icon_arrow_prev_black_40.svg) no-repeat center / contain;
+  transform: rotate(180deg);
+}
+.inn_slide .swiper-button-next::after {
+  display: none;
+}
+.swiper.inn_slide .swiper-pagination-bullet-active {
+  background-color: #fff;
+}
