--- a/trip_planner_front/src/page/promotion/promotion.css
+++ b/trip_planner_front/src/page/promotion/promotion.css
@@ -41,12 +41,12 @@
   -webkit-backdrop-filter: blur(5px);
 }
 
-.contents.promotion .promotion_item_wrap{
+.contents.promotion .promotion_item_wrap {
   position: relative;
 }
 
 .contents.promotion .promotion_content:hover {
-  box-shadow: 2px 10px 34px 10px  rgba(0, 0, 0, 0.28);
+  box-shadow: 2px 10px 34px 10px rgba(0, 0, 0, 0.28);
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
 }
@@ -57,27 +57,50 @@
   text-align: center;
   border-bottom: 1px solid #e9511c;
 }
-.contents.promotion .promotion-list-img{
+.contents.promotion .promotion-list-img {
   width: 300px;
   height: 300px;
   padding: 20px;
 }
 
-
-.contents.promotion .promotion-list-img>img{
+.contents.promotion .promotion-list-img > img {
   width: 100%;
   height: 100%;
   border-radius: 20px;
 }
 
-.contents.promotion .promotion-list-intro{
+.contents.promotion .promotion-list-intro {
   position: absolute;
   left: 400px;
   top: 130px;
 }
 
-.contents.promotion .promotion-list-price{
+.contents.promotion .promotion-list-price {
   position: absolute;
   bottom: 60px;
   left: 400px;
+}
+
+.contents.promotion .promotionView-wrap {
+  margin: 100px auto;
+}
+
+.contents.promotion .promotionView-header {
+  text-align: center;
+}
+
+.promotionView-header .promotionView-title {
+  font-size: 60px;
+  font-family: pt-b;
+}
+
+.promotionView-header .promotionView-thumbnail {
+  width: 600px;
+  height: 800px;
+}
+
+.contents.promotion .promotionView-tbl {
+  width: 600px;
+  margin: 0 auto;
+  border-spacing: 0;
 }
