--- a/trip_planner_front/src/page/promotion/promotion.css
+++ b/trip_planner_front/src/page/promotion/promotion.css
@@ -126,3 +126,21 @@ td {
   font-family: pt-r;
   font-size: 20px;
 }
+
+.contents.promotion .purchase-wrap {
+  border: 5px solid #1795f0;
+  border-radius: 20px;
+  height: 200px;
+  padding: 30px;
+  font-size: 30px;
+  font-family: pt-b;
+}
+
+.contents.promotion .purchase-price {
+  margin-bottom: 30px;
+}
+
+.contents.promotion #purchase-input {
+  border-bottom: 1px solid black;
+  font-size: 30px;
+}
