--- a/trip_planner_front/src/page/promotion/promotion.css
+++ b/trip_planner_front/src/page/promotion/promotion.css
@@ -144,3 +144,14 @@ td {
   border-bottom: 1px solid black;
   font-size: 30px;
 }
+
+.promotion_input_area {
+  width: 540px;
+  margin: 0 auto;
+  padding: 48px;
+  border: 1px solid #000;
+  border-radius: 24px;
+}
+.promotion-input-wrap {
+  padding-bottom: 40px;
+}
