아니 쿠폰dao 어디있어요

--- a/trip_planner_front/src/page/mypage/myBooks.css
+++ b/trip_planner_front/src/page/mypage/myBooks.css
@@ -26,3 +26,4 @@
 .myBook_list.promotion{flex-direction: row; flex-wrap: wrap;}
 .myBook_list.promotion>.bookItem{width: calc(50% - 12px); padding: 20px 20px 24px 20px;}
 .myBook_list.promotion>.bookItem .item_thumbs{width: 200px; height: 140px; background-color: #f2f2f2;}
+.myBook_list.promotion>.bookItem .item_details .row .title{width: 90px;}
