--- a/trip_planner_front/src/page/mypage/createTrips.css
+++ b/trip_planner_front/src/page/mypage/createTrips.css
@@ -1,5 +1,5 @@
 .contents.trips{max-width: none; width: calc(100% + 80px); margin-left: -40px; padding: 0;}
-.createTrips_wrap{display: flex; height: 700px; min-height: calc(100vh - 61px);}
+.createTrips_wrap{display: flex; height: 700px; min-height: calc(100vh - 61px); border-top: 1px solid var(--line_03);}
 .createTrips_wrap>.map_area{flex-grow: 1;}
 .createTrips_wrap>.left_area{position: relative; display: flex;}
 .createTrips_wrap .trips_wrap{position: relative; display: flex; flex-direction: column; width: 377px; padding: 30px 0 105px; border-right: 1px solid var(--line_03); background-color: #fff;}
@@ -42,10 +42,12 @@
 .createTrips_wrap .place_list>.item .tripRoute_no.color3{background-color: #25D3CA;}
 .createTrips_wrap .place_list>.item .tripRoute_no.color4{background-color: #39AEFD;}
 .createTrips_wrap .place_list>.item.tripTodo .tripRoute_no{width: 8px; height: 8px; margin: 0 auto; font-size: 0;}
-.createTrips_wrap .place_list>.item .item_box{position: relative; flex: 1; display: flex; flex-wrap: wrap; justify-content: space-between; gap: 4px; padding: 15px 11px 15px 19px; border: 1px solid var(--line_03); border-radius: 8px;}
+.createTrips_wrap .place_list>.item .item_box{position: relative; flex: 1; display: flex; flex-wrap: wrap; justify-content: space-between; gap: 4px; padding: 15px 11px 15px 19px; border: 1px solid var(--line_03); border-radius: 8px; cursor: pointer;}
+.createTrips_wrap .place_list>.item.active .item_box{border-color: rgba(23, 149, 240, 0.6); box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);}
 .createTrips_wrap .place_list>.item .item_box>.btn_area{flex: 1;}
 .createTrips_wrap .day_items_wrap .place_list>li:first-child{margin-top: 12px;}
 .createTrips_wrap .day_items_wrap .place_list>.item .item_box{max-width: calc(100% - 32px); padding: 15px 19px;}
+.createTrips_wrap .day_items_wrap .place_list>.item.active .item_box{border-color: rgba(233, 81, 28, 0.6); box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);}
 .createTrips_wrap .day_items_wrap .place_list>.item.tripTodo .item_box{padding-right: 30px;}
 .createTrips_wrap .day_items_wrap .place_list>.item .item_box .place_info{white-space: nowrap; text-overflow: ellipsis; overflow: hidden;}
 .createTrips_wrap .place_list>.item .item_box .place_name{font-family: pt-b; font-size: 14px; line-height: 1.5;}
