--- a/trip_planner_front/src/page/common/common.css
+++ b/trip_planner_front/src/page/common/common.css
@@ -17,89 +17,332 @@
 }
 
 /* color */
-:root{
+:root {
   /* main color */
-  --main_01: #005CAA;
-  --main_02: #E9511C;
-  --main_03: #F4F5EF;
+  --main_01: #005caa;
+  --main_02: #e9511c;
+  --main_03: #f4f5ef;
   --main_04: #000000;
 
   /* gray color */
   --gray_01: #222222;
   --gray_02: #555555;
   --gray_03: #717171;
-  --gray_04: #8F8F8F;
-  --gray_05: #B7B7B7;
+  --gray_04: #8f8f8f;
+  --gray_05: #b7b7b7;
 
   /* line color */
   --line_01: #222222;
-  --line_02: #D6D6D6;
-  --line_03: #EAECED;
+  --line_02: #d6d6d6;
+  --line_03: #eaeced;
 
   /* status color */
-  --success: #30E462;
-  --error: #FF2803;
-  --warning: #F9B71B;
-  --info: #1795F0;
+  --success: #30e462;
+  --error: #ff2803;
+  --warning: #f9b71b;
+  --info: #1795f0;
 }
 
 /* layout */
-html{font-family: pt-r;}
-.hidden{position: absolute; left: -9999%; font-size: 0; line-height: 0; text-indent: -9999%; overflow: hidden;}
+html {
+  font-family: pt-r;
+}
+.hidden {
+  position: absolute;
+  left: -9999%;
+  font-size: 0;
+  line-height: 0;
+  text-indent: -9999%;
+  overflow: hidden;
+}
 /* .scroll_fixed{position: fixed; left: 0; right: 0; top: 0; bottom: 0;} */
 
-.wrap{display: flex; flex-direction: column; min-height: 100vh;}
-.container{flex: 1; padding: 0 40px;}
-.contents{width: 100%; max-width: 1280px; margin: 0 auto; padding: 60px 0;}
-h2{margin-bottom: 48px; color: #000; font-family: pt-b; font-size: 24px; text-align: center; line-height: 1.5;}
-h3{margin-bottom: 24px; color: #000; font-family: pt-b; font-size: 20px; line-height: 1.5;}
-h4{margin-bottom: 20px; color: #000; font-family: pt-b; font-size: 16px; line-height: 1.5;}
-h5{margin-bottom: 8px; color: #000; font-family: pt-b; font-size: 14px; line-height: 1.5;}
+.wrap {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+.container {
+  flex: 1;
+  padding: 0 40px;
+}
+.contents {
+  width: 100%;
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 60px 0;
+}
+h2 {
+  margin-bottom: 48px;
+  color: #000;
+  font-family: pt-b;
+  font-size: 24px;
+  text-align: center;
+  line-height: 1.5;
+}
+h3 {
+  margin-bottom: 24px;
+  color: #000;
+  font-family: pt-b;
+  font-size: 20px;
+  line-height: 1.5;
+}
+h4 {
+  margin-bottom: 20px;
+  color: #000;
+  font-family: pt-b;
+  font-size: 16px;
+  line-height: 1.5;
+}
+h5 {
+  margin-bottom: 8px;
+  color: #000;
+  font-family: pt-b;
+  font-size: 14px;
+  line-height: 1.5;
+}
 
 /* header */
-.header{position: sticky; top: 0; background-color: #fff; z-index: 1000;}
-.header.line{border-bottom: 1px solid var(--line_03);}
-.header>.header_inner{display: flex; justify-content: space-between; width: 100%; max-width: 1280px; margin: 0 auto;}
-.logo>a{display: block; width: 140px; height: 60px; font-size: 0; text-indent: -9999%; overflow: hidden; background: url(/public/images/logo.svg) no-repeat center / contain;}
-.header .header_navi{position: relative; display: flex; align-items: center;}
-.header .search_wrap{display: flex;}
-.header .search_wrap>input{width: 0; padding: 8px 0 7px;font-size: 14px; line-height: 20px; transition: all 0.3s cubic-bezier(0.33, 1, 0.68, 1);}
-.header .search_wrap.active>input{width: 270px;}
-.header .search_wrap.focus>input{width: 270px;}
-.header .search_wrap>.btn_search{display: block; width: 36px; height: 36px; background: url(/public/images/icon_search.svg) no-repeat center / contain;}
-.header .menu_wrap>.menu_list{display: none; position: absolute; right: 0; top: 60px; padding: 12px 0; border: 1px solid #000; border-radius: 12px; background-color: #fff;}
-.header .menu_wrap>.menu_list.active{display: block;}
-.header .menu_wrap>.menu_list a{display: block; min-width: 165px; padding: 0 38px; font-size: 16px; line-height: 40px; text-align: center;}
-.header .menu_wrap>.menu_list a:hover{background-color: var(--main_03);}
-.header .menu_wrap>.btn_menu{display: block; width: 36px; height: 36px; background: url(/public/images/icon_menu.svg) no-repeat center / contain;}
+.header {
+  position: sticky;
+  top: 0;
+  background-color: #fff;
+  z-index: 1000;
+}
+.header.line {
+  border-bottom: 1px solid var(--line_03);
+}
+.header > .header_inner {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  max-width: 1280px;
+  margin: 0 auto;
+}
+.logo > a {
+  display: block;
+  width: 140px;
+  height: 60px;
+  font-size: 0;
+  text-indent: -9999%;
+  overflow: hidden;
+  background: url(/public/images/logo.svg) no-repeat center / contain;
+}
+.header .header_navi {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+.header .search_wrap {
+  display: flex;
+}
+.header .search_wrap > input {
+  width: 0;
+  padding: 8px 0 7px;
+  font-size: 14px;
+  line-height: 20px;
+  transition: all 0.3s cubic-bezier(0.33, 1, 0.68, 1);
+}
+.header .search_wrap.active > input {
+  width: 270px;
+}
+.header .search_wrap.focus > input {
+  width: 270px;
+}
+.header .search_wrap > .btn_search {
+  display: block;
+  width: 36px;
+  height: 36px;
+  background: url(/public/images/icon_search.svg) no-repeat center / contain;
+}
+.header .menu_wrap > .menu_list {
+  display: none;
+  position: absolute;
+  right: 0;
+  top: 60px;
+  padding: 12px 0;
+  border: 1px solid #000;
+  border-radius: 12px;
+  background-color: #fff;
+}
+.header .menu_wrap > .menu_list.active {
+  display: block;
+}
+.header .menu_wrap > .menu_list a {
+  display: block;
+  min-width: 165px;
+  padding: 0 38px;
+  font-size: 16px;
+  line-height: 40px;
+  text-align: center;
+}
+.header .menu_wrap > .menu_list a:hover {
+  background-color: var(--main_03);
+}
+.header .menu_wrap > .btn_menu {
+  display: block;
+  width: 36px;
+  height: 36px;
+  background: url(/public/images/icon_menu.svg) no-repeat center / contain;
+}
 
 /* footer */
-.footer{background-color: #000; z-index: 1001;}
-.footer>.footer_inner{width: 100%; max-width: 1280px; margin: 0 auto; padding: 60px 0;}
-.footer .logo{display: block; width: 140px; height: 20px; font-size: 0; text-indent: -9999%; overflow: hidden; background: url(/public/images/logo_white.svg) no-repeat center / contain;}
-.footer .menu_list>ul{display: flex; gap: 24px; margin-top: 20px;}
-.footer .menu_list>ul>li>a{display: block; color: #fff; font-size: 16px; line-height: 1.5;}
-.footer .footer_txt{margin-top: 40px; color: #fff; font-size: 14px; line-height: 1.5;}
+.footer {
+  background-color: #000;
+  z-index: 1001;
+}
+.footer > .footer_inner {
+  width: 100%;
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 60px 0;
+}
+.footer .logo {
+  display: block;
+  width: 140px;
+  height: 20px;
+  font-size: 0;
+  text-indent: -9999%;
+  overflow: hidden;
+  background: url(/public/images/logo_white.svg) no-repeat center / contain;
+}
+.footer .menu_list > ul {
+  display: flex;
+  gap: 24px;
+  margin-top: 20px;
+}
+.footer .menu_list > ul > li > a {
+  display: block;
+  color: #fff;
+  font-size: 16px;
+  line-height: 1.5;
+}
+.footer .footer_txt {
+  margin-top: 40px;
+  color: #fff;
+  font-size: 14px;
+  line-height: 1.5;
+}
 
 /* badge */
-.badge{display: inline-block; min-width: 69px; padding: 0 11px; border-radius: 30px; font-family: pt-b; font-size: 13px; line-height: 28px; text-align: center;}
-.badge.blue{border: 1px solid var(--info); background-color: rgba(23, 149, 240, 0.1); color: var(--info);}
-.badge.red{border: 1px solid var(--error); background-color: rgba(255, 40, 3, 0.1); color: var(--error);}
-.badge.green{border: 1px solid var(--success); background-color: rgba(48, 228, 98, 0.1); color: var(--success);}
-.badge.gray{border: 1px solid var(--gray_02); background-color: rgba(85, 85, 85, 0.1); color: var(--gray_02);}
-.badge.orange{min-width: 0; padding: 0 8px; border-radius: 4px; border: 1px solid var(--main_02); background-color: rgba(233, 81, 28, 0.1); color: var(--main_02); line-height: 22px;}
-.badges{display: flex; flex-wrap: wrap; gap: 8px;}
+.badge {
+  display: inline-block;
+  min-width: 69px;
+  padding: 0 11px;
+  border-radius: 30px;
+  font-family: pt-b;
+  font-size: 13px;
+  line-height: 28px;
+  text-align: center;
+}
+.badge.blue {
+  border: 1px solid var(--info);
+  background-color: rgba(23, 149, 240, 0.1);
+  color: var(--info);
+}
+.badge.red {
+  border: 1px solid var(--error);
+  background-color: rgba(255, 40, 3, 0.1);
+  color: var(--error);
+}
+.badge.green {
+  border: 1px solid var(--success);
+  background-color: rgba(48, 228, 98, 0.1);
+  color: var(--success);
+}
+.badge.gray {
+  border: 1px solid var(--gray_02);
+  background-color: rgba(85, 85, 85, 0.1);
+  color: var(--gray_02);
+}
+.badge.orange {
+  min-width: 0;
+  padding: 0 8px;
+  border-radius: 4px;
+  border: 1px solid var(--main_02);
+  background-color: rgba(233, 81, 28, 0.1);
+  color: var(--main_02);
+  line-height: 22px;
+}
+.badges {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 8px;
+}
 
 /* modal */
-.modal{position: fixed; left: 0; right: 0; top: 0; bottom: 0; background-color: rgba(0,0,0,0.6); z-index: 1002;}
-.modal .modal_wrap{position: absolute; top: 50%; left: 50%; transform: translate(-50%,-50%); display: flex; flex-direction: column; gap: 20px; width: 444px; max-height: 375px; padding: 40px 20px; background-color: #fff; border-radius: 8px;}
-.modal.lg .modal_wrap{width: 512px; max-height: 480px;}
-.modal .modal_title{font-family: pt-b; font-size: 20px; line-height: 1.5; text-align:center;}
-.modal .title_sub{margin-top: 12px; color: var(--gray_04); font-size: 14px; line-height: 1.5; text-align: center;}
-.modal .modal_container{/*height:114px;*/ padding: 0 20px; overflow-y: auto;}
-.modal .modal_content{display: flex; flex-direction: column; justify-content: center; min-height: 80px; font-size: 16px; line-height: 1.5;}
-.modal.lg .modal_content{min-height: 180px;}
-.modal .modal_content .center{text-align: enter;}
-.modal .modal_content .img_wrap>img{display: block; width: 100%;}
-.modal .btn_area{margin-top: 20px;}
-.modal .btn_close{position: absolute; top: 12px; right: 12px; display: block; width: 36px; height: 36px; background: url(/public/images/icon_close.svg) no-repeat center / 14px;}
+.modal {
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.6);
+  z-index: 1002;
+}
+.modal .modal_wrap {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  width: 444px;
+  max-height: 375px;
+  padding: 40px 20px;
+  background-color: #fff;
+  border-radius: 8px;
+}
+.modal.lg .modal_wrap {
+  width: 512px;
+  max-height: 480px;
+}
+.modal .modal_title {
+  font-family: pt-b;
+  font-size: 20px;
+  line-height: 1.5;
+  text-align: center;
+}
+.modal .title_sub {
+  margin-top: 12px;
+  color: var(--gray_04);
+  font-size: 14px;
+  line-height: 1.5;
+  text-align: center;
+}
+.modal .modal_container {
+  /*height:114px;*/
+  padding: 0 20px;
+  overflow-y: auto;
+}
+.modal .modal_content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  min-height: 80px;
+  font-size: 16px;
+  line-height: 1.5;
+}
+.modal.lg .modal_content {
+  min-height: 180px;
+}
+.modal .modal_content .center {
+  text-align: enter;
+}
+.modal .modal_content .img_wrap > img {
+  display: block;
+  width: 100%;
+}
+.modal .btn_area {
+  margin-top: 20px;
+}
+.modal .btn_close {
+  position: absolute;
+  top: 12px;
+  right: 12px;
+  display: block;
+  width: 36px;
+  height: 36px;
+  background: url(/public/images/icon_close.svg) no-repeat center / 14px;
+}
