--- a/trip_planner_front/src/page/INN/innDetailView.css
+++ b/trip_planner_front/src/page/INN/innDetailView.css
@@ -39,12 +39,6 @@
   font-size: 100%;
   line-height: 48px;
 }
-.hashTag-box {
-  color: var(--gray_04);
-  font-family: pt-b;
-  font-style: italic;
-  margin: 10px 0;
-}
 
 .inn-detail-intro {
   padding: 30px 0;
@@ -90,12 +84,20 @@
 }
 
 .room-name {
-  margin: 20px auto;
+  margin-top: 20px;
   text-align: center;
   font-family: pt-eb;
   color: var(--main_04);
   font-size: 1.25rem;
   background-color: #f1f1f1;
+}
+.hashTagItem {
+  text-align: center;
+  margin: 10px 0;
+  color: var(--gray_03);
+}
+.hashTagItem span {
+  font-family: pt-b;
 }
 .room-box-left img {
   width: 100%;
