--- a/trip_planner_front/src/component/formFrm.css
+++ b/trip_planner_front/src/component/formFrm.css
@@ -29,4 +29,8 @@ button[disabled]{opacity: 0.2;}
 .btn_link:visited{text-decoration: underline; text-underline-offset: 4px;}
 
 .textarea{display: flex; border: 1px solid var(--line_03); border-radius: 8px; overflow: hidden;}
-.textarea textarea{width: 100%; height: 157px; padding: 15px; resize: none; font-size: 16px; line-height: 1.5;} 
+.textarea textarea{width: 100%; height: 157px; padding: 15px; resize: none; font-size: 16px; line-height: 1.5;}
+
+.select{flex:1; position:relative; border:1px solid var(--line_02); border-radius:4px; background-color:#fff; overflow:hidden;}
+.select::after{content:''; display:block; position:absolute; top:0; right:8px; width:24px; height:40px; background:url(/public/images/icon_arrow_down.svg) no-repeat center / 12px;}
+.select>select{width:100%; padding:8px 12px; font-size:16px; line-height:1.5; cursor:pointer;}
