--- a/trip_planner_front/src/page/promotion/promotion.css
+++ b/trip_planner_front/src/page/promotion/promotion.css
@@ -155,3 +155,8 @@ td {
 .promotion-input-wrap {
   padding-bottom: 40px;
 }
+
+.contents.promotionApply .promotion-thumbnail-input {
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
