--- a/trip_planner_front/src/page/INN/innDetailView.css
+++ b/trip_planner_front/src/page/INN/innDetailView.css
@@ -39,7 +39,14 @@
   font-size: 100%;
   line-height: 48px;
 }
-
+.inn_detail-opt {
+  padding: 20px 0;
+  border-top: 1px solid #f1f1f1;
+  border-bottom: 1px solid #f1f1f1;
+}
+.inn_detail-opt > h3 {
+  margin: 0;
+}
 .inn-detail-intro {
   padding: 30px 0;
   border-top: 1px solid #f1f1f1;
@@ -78,9 +85,12 @@
   margin-bottom: 20px;
   border-radius: 10px;
   display: flex;
-  gap: 40px;
+  flex-direction: column;
   padding: 20px;
-  flex-grow: 1;
+}
+.inn-detail-conts {
+  display: flex;
+  gap: 20px;
 }
 
 .room-name {
@@ -100,13 +110,14 @@
   font-family: pt-b;
 }
 .room-box-left img {
-  width: 100%;
+  display: block;
   max-width: 500px;
-  height: 300px;
+  height: auto;
+  max-height: 336px;
   border-radius: 10px;
 }
 .room-box-right {
-  width: 70%;
+  flex-grow: 1;
 }
 .room-right-detail {
   border-radius: 10px;
@@ -166,10 +177,11 @@
   display: block;
 }
 .inn_slide .swiper-slide img {
-  width: 100%;
-  height: 600px;
+  width: 80%;
+  height: 480px;
   object-fit: cover;
   object-position: center;
+  border-radius: 10px;
 }
 .inn_slide .swiper-button-prev {
   left: calc((100% - 1280px) / 2);
@@ -196,4 +208,19 @@
 }
 .swiper.inn_slide .swiper-pagination-bullet-active {
   background-color: #fff;
+}
+.inn-detail-btm {
+  display: flex;
+  flex-wrap: wrap;
+}
+.option-icon {
+  display: flex;
+  gap: 8px;
+  padding: 8px;
+  color: rgb(112 112 112);
+}
+
+.option-title {
+  font-family: pt-b;
+  margin-top: 10px;
 }
