--- a/trip_planner_front/src/page/tour/tour.css
+++ b/trip_planner_front/src/page/tour/tour.css
@@ -136,17 +136,24 @@
 }
 
 /* 추천순, 가격낮은순 */
-.tour-option-wrap {
+.tour-list-sort {
   overflow: hidden;
   border-bottom: 2px solid #ccc;
   padding-bottom: 10px;
   margin: 0 auto;
   margin-bottom: 60px;
 }
-.tour-option-wrap > .tour-option-btn {
+.tour-list-sort > .tour-search-sort-star,
+.tour-search-sort-price {
   font-size: 16px;
   margin-right: 20px;
   float: right;
+  cursor: pointer;
+}
+
+.tour-search-sort-price > button,
+.tour-search-sort-star > button {
+  font-size: 16px;
 }
 
 /* 검색 상품 */
